diesel_compile_tests/tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.stderr
error: all fields of tuple structs must be annotated with `#[diesel(column_name)]`
  --> tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.rs:11:10
   |
LL | #[derive(QueryableByName)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `QueryableByName` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `foos`
 --> tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.rs:5:8
  |
LL | struct Foo {
  |        ^^^ use of unresolved module or unlinked crate `foos`
  |
  = help: you might be missing a crate named `foos`
For more information about this error, try `rustc --explain E0433`.
